tests/elab/fail/naked_expression2.t20
;; Naked integer literal at top level.
-64